# base-containers

./: .gitignore  .hadolint.yaml  AGENTS.md  Containerfile.cuda  Containerfile.cuda.template  Containerfile.python.template  Containerfile.rocm.template  README.md  pyproject.toml  renovate.json  requirements-build.txt  tox.ini
.github/workflows/: acp-bugfix.yml  auto-merge.yml  check-cuda-versions.yml  ci.yml  ok-to-test.yml
.tekton/: odh-midstream-cuda-base-12-8-pull-request.yaml  odh-midstream-cuda-base-12-8-push.yaml  odh-midstream-cuda-base-12-9-pull-request.yaml  odh-midstream-cuda-base-12-9-push.yaml  odh-midstream-cuda-base-13-0-pull-request.yaml  odh-midstream-cuda-base-13-0-push.yaml  odh-midstream-cuda-base-13-1-push.yaml  odh-midstream-cuda-base-13-2-pull-request.yaml  odh-midstream-cuda-base-13-2-push.yaml  odh-midstream-cuda-base-main-pull-request.yaml  odh-midstream-cuda-base-main-push.yaml  odh-midstream-python-base-3-12-push.yaml  odh-midstream-python-base-main-pull-request.yaml  odh-midstream-python-base-main-push.yaml  odh-midstream-rocm-base-6-4-pull-request.yaml  odh-midstream-rocm-base-6-4-push.yaml  odh-midstream-rocm-base-7-1-pull-request.yaml  odh-midstream-rocm-base-7-1-push.yaml
.tekton/pipelines/: pull-request.yaml  push.yaml
cuda/12.8/: Containerfile  app.conf
cuda/12.9/: Containerfile  app.conf
cuda/13.0/: Containerfile  app.conf
cuda/13.1/: Containerfile  app.conf
docs/: ADDING-ROCM-VERSION.md  DEVELOPMENT.md  RATIONALE.md
scripts/: build.sh  generate-containerfile.sh  generate-tag.sh  lint-containerfile.sh
tests/: __init__.py  conftest.py  test_common.py  test_cuda_image.py  test_generate_containerfile.sh  test_python_image.py  test_rocm_image.py
(+6 files in other folders)
