[project]
name = "odh-base-containers"
version = "0.1.0"
description = "ODH midstream base container images"
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0,<9.0.0",
]
lint = [
    "ruff>=0.8.0,<1.0.0",
]
type = [
    "mypy>=1.13.0,<2.0.0",
    "pytest>=8.0.0,<9.0.0",  # for type stubs
]
dev = [
    "odh-base-containers[test,lint,type]",
    "tox>=4.0.0,<5.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib (suggestions only)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "S603",     # subprocess call with shell=False (we need podman)
    "S607",     # start process with partial executable path
]

[tool.ruff.lint.isort]
known-first-party = ["tests"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert is expected in pytest tests

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

